// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`development transform CSSVariable 1`] = `
"import { CSSVariable } from "css-variable";
const primary = /*@__PURE__*/new CSSVariable("primary--mobtag0");
const secondary = /*@__PURE__*/new CSSVariable("secondary--mobtag1", {
  value: '#fff'
});
const theme = {
  colors: {
    primary: /*@__PURE__*/new CSSVariable("primary--mobtag2")
  }
};
const generated = allColors.map(color => /*@__PURE__*/new CSSVariable("mobtag3", color));
const generatedWithFallback = allColors.map(color => /*@__PURE__*/new CSSVariable("mobtag4", color, {
  value: '#000'
}));"
`;

exports[`development transform createVar 1`] = `"import { createVar } from "css-variable";"`;

exports[`development transform renamed 1`] = `
"import { CSSVariable as CSSVar, createVar as createVariable } from "css-variable";
const primary = /*@__PURE__*/new CSSVar("primary--1ynmbls0");
const secondary = /*@__PURE__*/createVariable("secondary--1ynmbls1");"
`;

exports[`production transform CSSVariable 1`] = `
""use strict";

var _cssVariable = require("css-variable");
const primary = /*@__PURE__*/new _cssVariable.CSSVariable("mobtag0");
const secondary = /*@__PURE__*/new _cssVariable.CSSVariable("mobtag1", {
  value: '#fff'
});
const theme = {
  colors: {
    primary: /*@__PURE__*/new _cssVariable.CSSVariable("mobtag2")
  }
};
const generated = allColors.map(color => /*@__PURE__*/new _cssVariable.CSSVariable("mobtag3", color));
const generatedWithFallback = allColors.map(color => /*@__PURE__*/new _cssVariable.CSSVariable("mobtag4", color, {
  value: '#000'
}));"
`;

exports[`production transform createVar 1`] = `
""use strict";

var _cssVariable = require("css-variable");"
`;

exports[`production transform renamed 1`] = `
""use strict";

var _cssVariable = require("css-variable");
const primary = /*@__PURE__*/new _cssVariable.CSSVariable("1ynmbls0");
const secondary = /*@__PURE__*/(0, _cssVariable.createVar)("1ynmbls1");"
`;

exports[`production transform with displayName CSSVariable 1`] = `
""use strict";

var _cssVariable = require("css-variable");
const primary = /*@__PURE__*/new _cssVariable.CSSVariable("primary--mobtag0");
const secondary = /*@__PURE__*/new _cssVariable.CSSVariable("secondary--mobtag1", {
  value: '#fff'
});
const theme = {
  colors: {
    primary: /*@__PURE__*/new _cssVariable.CSSVariable("primary--mobtag2")
  }
};
const generated = allColors.map(color => /*@__PURE__*/new _cssVariable.CSSVariable("mobtag3", color));
const generatedWithFallback = allColors.map(color => /*@__PURE__*/new _cssVariable.CSSVariable("mobtag4", color, {
  value: '#000'
}));"
`;

exports[`production transform with displayName createVar 1`] = `
""use strict";

var _cssVariable = require("css-variable");"
`;

exports[`production transform with displayName renamed 1`] = `
""use strict";

var _cssVariable = require("css-variable");
const primary = /*@__PURE__*/new _cssVariable.CSSVariable("primary--1ynmbls0");
const secondary = /*@__PURE__*/(0, _cssVariable.createVar)("secondary--1ynmbls1");"
`;
